--- a/.air.toml
+++ b/.air.toml
@@ -9,14 +9,14 @@ cmd = "./dev-scripts/build-backend dev"
 # The binary that the build script creates.
 bin = "bin/picoshare-dev"
 
+# The full command to run after building the app. Air will proxy this.
+full_bin = "./bin/picoshare-dev -db data/store.db"
+
 # File extensions to watch for changes.
 include_ext = ["go", "html", "js", "css"]
 
 # Directories to exclude from watching.
 exclude_dir = ["tmp", "e2e", "vendor"]
-
-# Command to run the app. Air will run this and proxy requests to it.
-cmd_after_build = "./bin/picoshare-dev -db data/store.db"
 
 [log]
 # Show timestamps in the log output.
@@ -25,8 +25,8 @@ time = true
 [proxy]
 # Enable the proxy, which is required for browser live-reloading.
 enabled = true
-# The port your Go application listens on inside the container.
-app_port = 4001
+# The port your Go application will listen on inside the container.
+app_port = 8080
 # The port the air proxy will listen on. We'll expose this port.
 proxy_port = 4001
 
